server/out/server/DaphneDSLGrammarParser.js
"use strict";
// Generated from ./server/DaphneDSLGrammar.g4 by ANTLR 4.9.0-SNAPSHOT
Object.defineProperty(exports, "__esModule", { value: true });
exports.BoolLiteralContext = exports.LiteralContext = exports.RangeContext = exports.IndexingContext = exports.FrameRowContext = exports.RowMajorFrameLiteralExprContext = exports.ColMajorFrameLiteralExprContext = exports.MatrixLiteralExprContext = exports.CondExprContext = exports.DisjExprContext = exports.ConjExprContext = exports.CmpExprContext = exports.AddExprContext = exports.MulExprContext = exports.ModExprContext = exports.PowExprContext = exports.MatmulExprContext = exports.MinusExprContext = exports.RightIdxExtractExprContext = exports.RightIdxFilterExprContext = exports.CastExprContext = exports.CallExprContext = exports.ParanthesesExprContext = exports.IdentifierExprContext = exports.ArgExprContext = exports.LiteralExprContext = exports.ExprContext = exports.FuncTypeDefContext = exports.FunctionRetTypesContext = exports.FunctionArgContext = exports.FunctionArgsContext = exports.ReturnStatementContext = exports.FunctionStatementContext = exports.ForStatementContext = exports.WhileStatementContext = exports.IfStatementContext = exports.AssignStatementContext = exports.ExprStatementContext = exports.BlockStatementContext = exports.ImportStatementContext = exports.StatementContext = exports.ScriptContext = exports.DaphneDSLGrammarParser = void 0;
const ATN_1 = require("antlr4ts/atn/ATN");
const ATNDeserializer_1 = require("antlr4ts/atn/ATNDeserializer");
const FailedPredicateException_1 = require("antlr4ts/FailedPredicateException");
const NoViableAltException_1 = require("antlr4ts/NoViableAltException");
const Parser_1 = require("antlr4ts/Parser");
const ParserRuleContext_1 = require("antlr4ts/ParserRuleContext");
const ParserATNSimulator_1 = require("antlr4ts/atn/ParserATNSimulator");
const RecognitionException_1 = require("antlr4ts/RecognitionException");
const Token_1 = require("antlr4ts/Token");
const VocabularyImpl_1 = require("antlr4ts/VocabularyImpl");
const Utils = require("antlr4ts/misc/Utils");
class DaphneDSLGrammarParser extends Parser_1.Parser {
    // @Override
    // @NotNull
    get vocabulary() {
        return DaphneDSLGrammarParser.VOCABULARY;
    }
    // tslint:enable:no-trailing-whitespace
    // @Override
    get grammarFileName() { return "DaphneDSLGrammar.g4"; }
    // @Override
    get ruleNames() { return DaphneDSLGrammarParser.ruleNames; }
    // @Override
    get serializedATN() { return DaphneDSLGrammarParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new FailedPredicateException_1.FailedPredicateException(this, predicate, message);
    }
    constructor(input) {
        super(input);
        this._interp = new ParserATNSimulator_1.ParserATNSimulator(DaphneDSLGrammarParser._ATN, this);
    }
    // @RuleVersion(0)
    script() {
        let _localctx = new ScriptContext(this._ctx, this.state);
        this.enterRule(_localctx, 0, DaphneDSLGrammarParser.RULE_script);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 45;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << DaphneDSLGrammarParser.T__1) | (1 << DaphneDSLGrammarParser.T__6) | (1 << DaphneDSLGrammarParser.T__12) | (1 << DaphneDSLGrammarParser.T__16) | (1 << DaphneDSLGrammarParser.T__17) | (1 << DaphneDSLGrammarParser.T__30))) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & ((1 << (DaphneDSLGrammarParser.KW_IF - 33)) | (1 << (DaphneDSLGrammarParser.KW_WHILE - 33)) | (1 << (DaphneDSLGrammarParser.KW_DO - 33)) | (1 << (DaphneDSLGrammarParser.KW_FOR - 33)) | (1 << (DaphneDSLGrammarParser.KW_TRUE - 33)) | (1 << (DaphneDSLGrammarParser.KW_FALSE - 33)) | (1 << (DaphneDSLGrammarParser.KW_AS - 33)) | (1 << (DaphneDSLGrammarParser.KW_DEF - 33)) | (1 << (DaphneDSLGrammarParser.KW_RETURN - 33)) | (1 << (DaphneDSLGrammarParser.KW_IMPORT - 33)) | (1 << (DaphneDSLGrammarParser.INT_LITERAL - 33)) | (1 << (DaphneDSLGrammarParser.FLOAT_LITERAL - 33)) | (1 << (DaphneDSLGrammarParser.STRING_LITERAL - 33)) | (1 << (DaphneDSLGrammarParser.IDENTIFIER - 33)))) !== 0)) {
                    {
                        {
                            this.state = 42;
                            this.statement();
                        }
                    }
                    this.state = 47;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 48;
                this.match(DaphneDSLGrammarParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    statement() {
        let _localctx = new StatementContext(this._ctx, this.state);
        this.enterRule(_localctx, 2, DaphneDSLGrammarParser.RULE_statement);
        try {
            this.state = 59;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 1, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 50;
                        this.blockStatement();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 51;
                        this.exprStatement();
                    }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 52;
                        this.assignStatement();
                    }
                    break;
                case 4:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 53;
                        this.ifStatement();
                    }
                    break;
                case 5:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 54;
                        this.whileStatement();
                    }
                    break;
                case 6:
                    this.enterOuterAlt(_localctx, 6);
                    {
                        this.state = 55;
                        this.forStatement();
                    }
                    break;
                case 7:
                    this.enterOuterAlt(_localctx, 7);
                    {
                        this.state = 56;
                        this.functionStatement();
                    }
                    break;
                case 8:
                    this.enterOuterAlt(_localctx, 8);
                    {
                        this.state = 57;
                        this.returnStatement();
                    }
                    break;
                case 9:
                    this.enterOuterAlt(_localctx, 9);
                    {
                        this.state = 58;
                        this.importStatement();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    importStatement() {
        let _localctx = new ImportStatementContext(this._ctx, this.state);
        this.enterRule(_localctx, 4, DaphneDSLGrammarParser.RULE_importStatement);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 61;
                this.match(DaphneDSLGrammarParser.KW_IMPORT);
                this.state = 62;
                _localctx._filePath = this.match(DaphneDSLGrammarParser.STRING_LITERAL);
                this.state = 65;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === DaphneDSLGrammarParser.KW_AS) {
                    {
                        this.state = 63;
                        this.match(DaphneDSLGrammarParser.KW_AS);
                        this.state = 64;
                        _localctx._alias = this.match(DaphneDSLGrammarParser.STRING_LITERAL);
                    }
                }
                this.state = 67;
                this.match(DaphneDSLGrammarParser.T__0);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    blockStatement() {
        let _localctx = new BlockStatementContext(this._ctx, this.state);
        this.enterRule(_localctx, 6, DaphneDSLGrammarParser.RULE_blockStatement);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 69;
                this.match(DaphneDSLGrammarParser.T__1);
                this.state = 73;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << DaphneDSLGrammarParser.T__1) | (1 << DaphneDSLGrammarParser.T__6) | (1 << DaphneDSLGrammarParser.T__12) | (1 << DaphneDSLGrammarParser.T__16) | (1 << DaphneDSLGrammarParser.T__17) | (1 << DaphneDSLGrammarParser.T__30))) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & ((1 << (DaphneDSLGrammarParser.KW_IF - 33)) | (1 << (DaphneDSLGrammarParser.KW_WHILE - 33)) | (1 << (DaphneDSLGrammarParser.KW_DO - 33)) | (1 << (DaphneDSLGrammarParser.KW_FOR - 33)) | (1 << (DaphneDSLGrammarParser.KW_TRUE - 33)) | (1 << (DaphneDSLGrammarParser.KW_FALSE - 33)) | (1 << (DaphneDSLGrammarParser.KW_AS - 33)) | (1 << (DaphneDSLGrammarParser.KW_DEF - 33)) | (1 << (DaphneDSLGrammarParser.KW_RETURN - 33)) | (1 << (DaphneDSLGrammarParser.KW_IMPORT - 33)) | (1 << (DaphneDSLGrammarParser.INT_LITERAL - 33)) | (1 << (DaphneDSLGrammarParser.FLOAT_LITERAL - 33)) | (1 << (DaphneDSLGrammarParser.STRING_LITERAL - 33)) | (1 << (DaphneDSLGrammarParser.IDENTIFIER - 33)))) !== 0)) {
                    {
                        {
                            this.state = 70;
                            this.statement();
                        }
                    }
                    this.state = 75;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 76;
                this.match(DaphneDSLGrammarParser.T__2);
                this.state = 78;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === DaphneDSLGrammarParser.T__0) {
                    {
                        this.state = 77;
                        this.match(DaphneDSLGrammarParser.T__0);
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    exprStatement() {
        let _localctx = new ExprStatementContext(this._ctx, this.state);
        this.enterRule(_localctx, 8, DaphneDSLGrammarParser.RULE_exprStatement);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 80;
                this.expr(0);
                this.state = 81;
                this.match(DaphneDSLGrammarParser.T__0);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    assignStatement() {
        let _localctx = new AssignStatementContext(this._ctx, this.state);
        this.enterRule(_localctx, 10, DaphneDSLGrammarParser.RULE_assignStatement);
        let _la;
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 87;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
                while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 83;
                                this.match(DaphneDSLGrammarParser.IDENTIFIER);
                                this.state = 84;
                                this.match(DaphneDSLGrammarParser.T__3);
                            }
                        }
                    }
                    this.state = 89;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
                }
                this.state = 90;
                this.match(DaphneDSLGrammarParser.IDENTIFIER);
                this.state = 92;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === DaphneDSLGrammarParser.T__30) {
                    {
                        this.state = 91;
                        this.indexing();
                    }
                }
                this.state = 108;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === DaphneDSLGrammarParser.T__4) {
                    {
                        {
                            this.state = 94;
                            this.match(DaphneDSLGrammarParser.T__4);
                            this.state = 99;
                            this._errHandler.sync(this);
                            _alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
                            while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                                if (_alt === 1) {
                                    {
                                        {
                                            this.state = 95;
                                            this.match(DaphneDSLGrammarParser.IDENTIFIER);
                                            this.state = 96;
                                            this.match(DaphneDSLGrammarParser.T__3);
                                        }
                                    }
                                }
                                this.state = 101;
                                this._errHandler.sync(this);
                                _alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
                            }
                            this.state = 102;
                            this.match(DaphneDSLGrammarParser.IDENTIFIER);
                            this.state = 104;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                            if (_la === DaphneDSLGrammarParser.T__30) {
                                {
                                    this.state = 103;
                                    this.indexing();
                                }
                            }
                        }
                    }
                    this.state = 110;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 111;
                this.match(DaphneDSLGrammarParser.T__5);
                this.state = 112;
                this.expr(0);
                this.state = 113;
                this.match(DaphneDSLGrammarParser.T__0);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    ifStatement() {
        let _localctx = new IfStatementContext(this._ctx, this.state);
        this.enterRule(_localctx, 12, DaphneDSLGrammarParser.RULE_ifStatement);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 115;
                this.match(DaphneDSLGrammarParser.KW_IF);
                this.state = 116;
                this.match(DaphneDSLGrammarParser.T__6);
                this.state = 117;
                _localctx._cond = this.expr(0);
                this.state = 118;
                this.match(DaphneDSLGrammarParser.T__7);
                this.state = 119;
                _localctx._thenStmt = this.statement();
                this.state = 122;
                this._errHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this._input, 10, this._ctx)) {
                    case 1:
                        {
                            this.state = 120;
                            this.match(DaphneDSLGrammarParser.KW_ELSE);
                            this.state = 121;
                            _localctx._elseStmt = this.statement();
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    whileStatement() {
        let _localctx = new WhileStatementContext(this._ctx, this.state);
        this.enterRule(_localctx, 14, DaphneDSLGrammarParser.RULE_whileStatement);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 139;
                this._errHandler.sync(this);
                switch (this._input.LA(1)) {
                    case DaphneDSLGrammarParser.KW_WHILE:
                        {
                            this.state = 124;
                            this.match(DaphneDSLGrammarParser.KW_WHILE);
                            this.state = 125;
                            this.match(DaphneDSLGrammarParser.T__6);
                            this.state = 126;
                            _localctx._cond = this.expr(0);
                            this.state = 127;
                            this.match(DaphneDSLGrammarParser.T__7);
                            this.state = 128;
                            _localctx._bodyStmt = this.statement();
                        }
                        break;
                    case DaphneDSLGrammarParser.KW_DO:
                        {
                            this.state = 130;
                            this.match(DaphneDSLGrammarParser.KW_DO);
                            this.state = 131;
                            _localctx._bodyStmt = this.statement();
                            this.state = 132;
                            this.match(DaphneDSLGrammarParser.KW_WHILE);
                            this.state = 133;
                            this.match(DaphneDSLGrammarParser.T__6);
                            this.state = 134;
                            _localctx._cond = this.expr(0);
                            this.state = 135;
                            this.match(DaphneDSLGrammarParser.T__7);
                            this.state = 137;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                            if (_la === DaphneDSLGrammarParser.T__0) {
                                {
                                    this.state = 136;
                                    this.match(DaphneDSLGrammarParser.T__0);
                                }
                            }
                        }
                        break;
                    default:
                        throw new NoViableAltException_1.NoViableAltException(this);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    forStatement() {
        let _localctx = new ForStatementContext(this._ctx, this.state);
        this.enterRule(_localctx, 16, DaphneDSLGrammarParser.RULE_forStatement);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 141;
                this.match(DaphneDSLGrammarParser.KW_FOR);
                this.state = 142;
                this.match(DaphneDSLGrammarParser.T__6);
                this.state = 143;
                _localctx._var = this.match(DaphneDSLGrammarParser.IDENTIFIER);
                this.state = 144;
                this.match(DaphneDSLGrammarParser.KW_IN);
                this.state = 145;
                _localctx._from = this.expr(0);
                this.state = 146;
                this.match(DaphneDSLGrammarParser.T__8);
                this.state = 147;
                _localctx._to = this.expr(0);
                this.state = 150;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === DaphneDSLGrammarParser.T__8) {
                    {
                        this.state = 148;
                        this.match(DaphneDSLGrammarParser.T__8);
                        this.state = 149;
                        _localctx._step = this.expr(0);
                    }
                }
                this.state = 152;
                this.match(DaphneDSLGrammarParser.T__7);
                this.state = 153;
                _localctx._bodyStmt = this.statement();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    functionStatement() {
        let _localctx = new FunctionStatementContext(this._ctx, this.state);
        this.enterRule(_localctx, 18, DaphneDSLGrammarParser.RULE_functionStatement);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 155;
                this.match(DaphneDSLGrammarParser.KW_DEF);
                this.state = 156;
                _localctx._name = this.match(DaphneDSLGrammarParser.IDENTIFIER);
                this.state = 157;
                this.match(DaphneDSLGrammarParser.T__6);
                this.state = 159;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === DaphneDSLGrammarParser.IDENTIFIER) {
                    {
                        this.state = 158;
                        _localctx._args = this.functionArgs();
                    }
                }
                this.state = 161;
                this.match(DaphneDSLGrammarParser.T__7);
                this.state = 164;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === DaphneDSLGrammarParser.T__9) {
                    {
                        this.state = 162;
                        this.match(DaphneDSLGrammarParser.T__9);
                        this.state = 163;
                        _localctx._retTys = this.functionRetTypes();
                    }
                }
                this.state = 166;
                _localctx._bodyStmt = this.blockStatement();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    returnStatement() {
        let _localctx = new ReturnStatementContext(this._ctx, this.state);
        this.enterRule(_localctx, 20, DaphneDSLGrammarParser.RULE_returnStatement);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 168;
                this.match(DaphneDSLGrammarParser.KW_RETURN);
                this.state = 177;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << DaphneDSLGrammarParser.T__1) | (1 << DaphneDSLGrammarParser.T__6) | (1 << DaphneDSLGrammarParser.T__12) | (1 << DaphneDSLGrammarParser.T__16) | (1 << DaphneDSLGrammarParser.T__17) | (1 << DaphneDSLGrammarParser.T__30))) !== 0) || ((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & ((1 << (DaphneDSLGrammarParser.KW_TRUE - 39)) | (1 << (DaphneDSLGrammarParser.KW_FALSE - 39)) | (1 << (DaphneDSLGrammarParser.KW_AS - 39)) | (1 << (DaphneDSLGrammarParser.INT_LITERAL - 39)) | (1 << (DaphneDSLGrammarParser.FLOAT_LITERAL - 39)) | (1 << (DaphneDSLGrammarParser.STRING_LITERAL - 39)) | (1 << (DaphneDSLGrammarParser.IDENTIFIER - 39)))) !== 0)) {
                    {
                        this.state = 169;
                        this.expr(0);
                        this.state = 174;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while (_la === DaphneDSLGrammarParser.T__4) {
                            {
                                {
                                    this.state = 170;
                                    this.match(DaphneDSLGrammarParser.T__4);
                                    this.state = 171;
                                    this.expr(0);
                                }
                            }
                            this.state = 176;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                    }
                }
                this.state = 179;
                this.match(DaphneDSLGrammarParser.T__0);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    functionArgs() {
        let _localctx = new FunctionArgsContext(this._ctx, this.state);
        this.enterRule(_localctx, 22, DaphneDSLGrammarParser.RULE_functionArgs);
        let _la;
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 181;
                this.functionArg();
                this.state = 186;
                this._errHandler.sync(this);
                _alt = this.interpreter.adaptivePredict(this._input, 18, this._ctx);
                while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 182;
                                this.match(DaphneDSLGrammarParser.T__4);
                                this.state = 183;
                                this.functionArg();
                            }
                        }
                    }
                    this.state = 188;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 18, this._ctx);
                }
                this.state = 190;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === DaphneDSLGrammarParser.T__4) {
                    {
                        this.state = 189;
                        this.match(DaphneDSLGrammarParser.T__4);
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    functionArg() {
        let _localctx = new FunctionArgContext(this._ctx, this.state);
        this.enterRule(_localctx, 24, DaphneDSLGrammarParser.RULE_functionArg);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 192;
                _localctx._var = this.match(DaphneDSLGrammarParser.IDENTIFIER);
                this.state = 195;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === DaphneDSLGrammarParser.T__8) {
                    {
                        this.state = 193;
                        this.match(DaphneDSLGrammarParser.T__8);
                        this.state = 194;
                        _localctx._ty = this.funcTypeDef();
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    functionRetTypes() {
        let _localctx = new FunctionRetTypesContext(this._ctx, this.state);
        this.enterRule(_localctx, 26, DaphneDSLGrammarParser.RULE_functionRetTypes);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 197;
                this.funcTypeDef();
                this.state = 202;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === DaphneDSLGrammarParser.T__4) {
                    {
                        {
                            this.state = 198;
                            this.match(DaphneDSLGrammarParser.T__4);
                            this.state = 199;
                            this.funcTypeDef();
                        }
                    }
                    this.state = 204;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    funcTypeDef() {
        let _localctx = new FuncTypeDefContext(this._ctx, this.state);
        this.enterRule(_localctx, 28, DaphneDSLGrammarParser.RULE_funcTypeDef);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 212;
                this._errHandler.sync(this);
